# freezing-web

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  Dockerfile  MANIFEST.in  README.md  Vagrantfile  alembic.ini  docker-compose.yml  example.cfg  local_settings.py-example  manage.py  pyproject.toml  requirements-test.txt  requirements.txt  setup.py
.github/: dependabot.yml
.github/workflows/: black.yml  build-docker.yml  build-latest.yml  build-tag.yml  build.yml  lint.yml  security.yml
alembic/: env.py
alembic/versions/: 1259f25794b5_add_ride_errors.py  17b73a90925d_ride_tracks.py  180c13f61b54_athlete_cols.py  22183530616d_photo_ref_null.py  3361172cfdc9_add_access_token.py  41c3e58a61aa_bookkeeping.py  4874dd6f743c_create_ride_photos.py  48e1dd00cbd8_add_photo_uid.py  54627e8199c9_photos_fetched_null.py  54675468b7bb_manual_column.py  56a0f0a1f30d_add_ride_private_col.py  628c4c0afbd_bigint_ids.py  65e22ab36882_new_streams.py  6cca33764ed5_reverse_track_coords.py  74b6566816aa_observer_teams.py  8925b9da7d7_drop_global_privacy_col.py  a3aee1eb0fb_add_athlete_display_name.py  a77103b34b0b_real_utf8.py  c206a3641567_reverse_coordinates.py  c5bfe51cfec3_nullable_ride_photos_ref.py  ca3d5036d720_photo_fields.py
bafs/: __init__.py  admin.py  autolog.py  data.py  default_settings.py  exc.py  model.py  models.py  runserver.py  scripts.py  serialize.py  settings.py  urls.py  views.py  wktutils.py  wsgi.py
bafs/management/: __init__.py
bafs/scripts/: __init__.py  fix_photo_urls.py  init_db.py  sync_activity_detail.py  sync_activity_details.py  sync_athletes.py  sync_photos.py  sync_ride_weather.py  sync_rides.py  sync_streams.py
bafs/static/: basic.css  style.css  tabs.css
bafs/static/css/: styles.css
bafs/templates/: authorization_error.html  authorization_success.html  authorize.html  base.html  index.html  leaderboard.html  login.html  photos.html
bafs/templates/alt_scoring/: indiv_freeze.html  indiv_hains.html  indiv_worst_day_points.html  team_daily.html  team_hains.html  team_riders.html
bafs/templates/explore/: distance_by_lowtemp.html  indiv_elev_dist.html  miles_by_lowtemp.html  riders_by_lowtemp.html  team_weekly_points.html
bafs/templates/fileutils/: upload.html
bafs/templates/leaderboard/: indiv.html  indiv_elev.html  indiv_generic.html  indiv_text.html  indiv_various.html  team.html  team_elev.html  team_text.html  team_trends.html  team_various.html
bafs/templates/people/: averagedistance.html  billygoat.html  list.html  ridedays.html  show.html  tortoiseteam.html  weekend.html
bafs/templates/pointless/: averagespeed.html  coffeeride.html  distance.html  opmdays.html  points_per_mile.html
bafs/templates/trends/: team_cumul.html
bafs/templates/user/: rides.html
bafs/utils/: auth.py  dates.py  dbutil.py  gviz_api.py  insta.py
bafs/views/: alt_scoring.py  api.py  chartdata.py  fileutils.py  general.py  leaderboard.py  people.py  photos.py  pointless.py  shared_sql.py  user.py
docs/: news.txt
freezing/: meta.py
freezing/sql/: generate-table-counts-query.sql  table-counts-before-table-drop.sql  table-counts.sql  year-start.sql
freezing/web/: __init__.py  _faulthandler.py  autolog.py  config.py  data.py  exc.py  runserver.py  serialize.py  version.py
freezing/web/scripts/: __init__.py  fix_photo_urls.py  init_db.py  sync_activity_detail.py  sync_athletes.py  sync_photos.py  sync_ride_weather.py  sync_rides.py  sync_streams.py
freezing/web/static/css/: bootstrap-table.min.css  ekko-lightbox.min.css  leaflet-gesture-handling.min.css  styles.css
freezing/web/static/js/: base.js  ekko-lightbox-min.js  ride-map.js  snow.js
freezing/web/templates/: authorization_error.html  authorization_success.html  authorize.html  base.html  base_footer.html  base_navbar.html  discord.html  index.html  login.html  login_results.html  photos.html
freezing/web/templates/alt_scoring/: indiv_freeze.html  indiv_hains.html  indiv_sleaze.html  indiv_worst_day_points.html  team_daily.html  team_hains.html  team_riders.html  team_sleaze.html
freezing/web/templates/explore/: distance_by_lowtemp.html  indiv_elev_dist.html  riders_by_lowtemp.html  riders_vs_weather.html  team_cumul.html  team_daily.html  team_riders.html  team_weekly_points.html
freezing/web/templates/leaderboard/: indiv.html  indiv_freeze.html  indiv_hains.html  indiv_sleaze.html  indiv_text.html  indiv_various.html  team.html  team_sleaze.html  team_text.html  team_various.html
freezing/web/templates/people/: friends.html  list.html  ridedays.html  show.html
freezing/web/templates/pointless/: averagetemp.html  civilwarhistory.html  coffeeride.html  daily_variance.html  distance.html  foodrescue.html  generic.html  hashtag.html  kidmiles.html  kidsathlon.html  opmdays.html  phototag.html  pointlesskids.html  (+3 more)
freezing/web/utils/: auth.py  dates.py  genericboard.py  gviz_api.py  hashboard.py  insta.py  meta.py  segboard.py  sqlog.py  tribes.py  wktutils.py
freezing/web/views/: alt_scoring.py  api.py  chartdata.py  explore.py  general.py  leaderboard.py  people.py  photos.py  pointless.py  shared_sql.py  teams.py  tribes.py  user.py
leaderboards/: adulting.yml  alaska.yml  alexandria.yml  arlington-ccw.yml  arlington-cw.yml  arlington.yml  avgdist.yml  avgspeed.yml  avgtemp.yml  billygoat-indiv.yml  billygoat-team.yml  billygoat.yml  commute.yml  decasleaze.yml  dirtybiker.yml  doompatrol.yml  dumpling.yml  foodrescue.yml  hashtag.yml  kidmiles.yml  legend.yml  londonbridge.yml  lostdog.yml  naturedose.yml  opmdays.yml  parkfinder.yml  poggio-indiv.yml  poggio-team.yml  pointless.yml  pointlesskids.yml  rosshillloop.yml  segment.yml  suppleride.yml  tandem.yml  tortoiseteam.yml  tribes.yml  weekend.yml
resources/docker/: settings.example.cfg  sources.list
resources/passenger/: passenger_wsgi.py
strava/: units.py
strava/api/: __init__.py  scrape.py  v1.py  v2.py
test/: wget-spider.sh
weather/: sunrise.py
weather/ncdc/: api.py
weather/wunder/: api.py  model.py
wx/: sunrise.py  tzwhere.py
wx/ncdc/: model.py
wx/wunder/: api.py
(+5 files in other folders)
