[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

# PEP 420 namespace packages need some special treatment, see
# Thanks @jherland for the hints!
# https://realpython.com/python-namespace-package/
# https://peps.python.org/pep-0420/
[tool.setuptools.packages.find]
where = ["."]
include = ["freezing"]
namespaces = true

[project]
name = "freezing-web"
version = "1.6.0"
description = "Freezing Saddles website component."
authors = [
    {name = "Hans Lellelid", email = "hans@xmpl.org"},
    {name = "Ian Will"},
    {name = "Jon Renaut"},
    {name = "Merlin Hughes"},
    {name = "Richard Bullington-McGuire", email = "richard.bullington.mcguire@gmail.com"},
    {name = "Adrian Porter"},
    {name = "Joe Tatsuko"}
]
license = {text = "Apache License (2.0)"}
dependencies = [
    "Flask==3.1.0",
    "PyMySQL[rsa]==1.1.1",
    "PyYAML==6.0.2",
    "SQLAlchemy==2.0.39",
    # Thanks https://stackoverflow.com/a/77214086/424301 - Flask did not pin Werkzeug dep
    "Werkzeug==3.1.3",
    "arrow==1.3.0",
    "colorlog==6.9.0",
    "python-dateutil==2.9.0.post0",
    "envparse==0.2.0",
    "freezing-model @ https://github.com/freezingsaddles/freezing-model/archive/0.12.0.tar.gz",
    "marshmallow==4.0.0",
    "python-instagram==1.3.2",
    "pytz==2025.1",
    "stravalib==1.2.0",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Games",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Natural Language :: English",
]

[project.optional-dependencies]
dev = [
    "autoflake",
    "bandit",
    "black",
    "djlint",
    "fawltydeps",
    "flake8",
    "flake8-pyproject",
    "isort",
    "pre-commit",
    "pymarkdownlnt",
]
runtime = [
    "gunicorn==23.0.0",
]

[tool.isort]
profile = "black"

[tool.djlint]
line_break_after_multiline_tag=true
max_line_length=88

[tool.pymarkdown]
plugins.md013.enabled = false
extensions.front-matter.enabled = true

[project.scripts]
freezing-server = "freezing.web.runserver:main"

[tool.flake8]
# Thanks https://www.reddit.com/r/learnpython/comments/rr6y69/comment/hqeqt68/?utm_source=share&utm_medium=web2x&context=3
ignore = [
    "E203",
    "E501",
    "W503",
]
max-line-length = 88
max-complexity = 39
extend-ignore = "E203"
inline-quotes = "double"

[tool.fawltydeps]
ignore_unused = [
    "PyMySQL",
    "autoflake",
    "bandit",
    "black",
    "djlint",
    "fawltydeps",
    "flake8",
    "flake8-pyproject",
    "freezing-model",
    "gunicorn",
    "isort",
    "pre-commit",
    "pymarkdownlnt",
]
